--- a/app/src/main/res/layout/view_bottom_balance.xml
+++ b/app/src/main/res/layout/view_bottom_balance.xml
@@ -66,6 +66,7 @@
         android:text="20元起送"
         android:textColor="@color/white"
         android:textSize="@dimen/sp_18"
+        android:clickable="false"
         />
 
 </LinearLayout>
