--- a/app/src/main/res/layout/activity_confirm_order.xml
+++ b/app/src/main/res/layout/activity_confirm_order.xml
@@ -107,50 +107,58 @@
             <LinearLayout
                 android:id="@+id/confirm_order_deliveryL"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_50"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="@dimen/dp_15"
-                    android:layout_height="@dimen/dp_15"
-                    android:layout_marginLeft="@dimen/dp_10"
-                    android:layout_marginRight="@dimen/dp_5"
-                    android:src="@drawable/icon_delivery"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_50"
                     android:gravity="center_vertical"
-                    android:text="配送方式"
-                    android:textColor="@color/text_black"
-                    android:textSize="@dimen/sp_14"
-                    />
+                    android:orientation="horizontal">
 
-                <include layout="@layout/space_h"/>
+                    <ImageView
+                        android:layout_width="@dimen/dp_15"
+                        android:layout_height="@dimen/dp_15"
+                        android:layout_marginLeft="@dimen/dp_10"
+                        android:layout_marginRight="@dimen/dp_5"
+                        android:src="@drawable/icon_delivery"/>
 
-                <TextView
-                    android:id="@+id/confirm_order_delivery"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:text="平台配送"
-                    android:textColor="@color/text_dark_gray"
-                    android:textSize="@dimen/sp_14"
-                    />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:text="配送方式"
+                        android:textColor="@color/text_black"
+                        android:textSize="@dimen/sp_14"
+                        />
 
-                <ImageView
-                    android:layout_width="@dimen/dp_15"
-                    android:layout_height="@dimen/dp_15"
-                    android:layout_marginLeft="@dimen/dp_6"
-                    android:layout_marginRight="@dimen/dp_10"
-                    android:src="@drawable/ic_goto_arrow"/>
+                    <include layout="@layout/space_h"/>
+
+                    <TextView
+                        android:id="@+id/confirm_order_delivery"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical"
+                        android:text="平台配送"
+                        android:textColor="@color/text_dark_gray"
+                        android:textSize="@dimen/sp_14"
+                        />
+
+                    <ImageView
+                        android:layout_width="@dimen/dp_15"
+                        android:layout_height="@dimen/dp_15"
+                        android:layout_marginLeft="@dimen/dp_6"
+                        android:layout_marginRight="@dimen/dp_10"
+                        android:src="@drawable/ic_goto_arrow"/>
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_10"
+                    android:background="@color/bg"/>
+
             </LinearLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_10"
-                android:background="@color/bg"/>
+
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/confirm_order_stores"
