--- a/app/src/main/res/layout/activity_select_delivery.xml
+++ b/app/src/main/res/layout/activity_select_delivery.xml
@@ -43,6 +43,7 @@
         android:layout_height="@dimen/dp_80"
         android:layout_marginTop="@dimen/dp_0.5"
         android:background="@color/white"
+        android:padding="@dimen/dp_10"
         />
 
     <LinearLayout
