--- a/app/src/main/res/layout/item_settle_store.xml
+++ b/app/src/main/res/layout/item_settle_store.xml
@@ -5,84 +5,104 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical">
-    <!--店名-->
-    <LinearLayout
+    <!-- 店名 商品 是否在配送范围-->
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_40"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
+        <!--店名-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_40"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="@dimen/dp_15"
+                android:layout_height="@dimen/dp_15"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginRight="@dimen/dp_5"
+                android:src="@drawable/icon_shop"/>
+
+            <TextView
+                android:id="@+id/confirm_order_store_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:text="同城鸽便利店"
+                android:textColor="@color/text_black"
+                android:textSize="@dimen/sp_14"
+                />
+
+            <include layout="@layout/space_h"/>
+
+            <TextView
+                android:id="@+id/confirm_order_store_delivery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/dp_10"
+                android:gravity="center_vertical"
+                android:text="同城鸽专送"
+                android:textColor="@color/text_dark_gray"
+                android:textSize="@dimen/sp_14"
+                />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_0.5"
+            android:layout_marginTop="@dimen/dp_40"
+            android:background="@color/bg"/>
+
+        <!--商品-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_80"
+            android:layout_marginTop="@dimen/dp_40"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/confirm_order_goods"
+                android:layout_width="@dimen/dp_280"
+                android:layout_height="@dimen/dp_80"
+                android:padding="@dimen/dp_10"
+                />
+
+            <TextView
+                android:id="@+id/confirm_order_goods_num"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:drawablePadding="@dimen/dp_8"
+                android:drawableRight="@drawable/ic_goto_arrow"
+                android:gravity="center_vertical|right"
+                android:paddingRight="@dimen/dp_10"
+                android:text="共10件"
+                android:textColor="@color/text_dark_gray"
+                android:textSize="@dimen/sp_14"
+                />
+        </LinearLayout>
 
         <ImageView
-            android:layout_width="@dimen/dp_15"
-            android:layout_height="@dimen/dp_15"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_marginRight="@dimen/dp_5"
-            android:src="@drawable/icon_shop"/>
-
-        <TextView
-            android:id="@+id/confirm_order_store_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:text="同城鸽便利店"
-            android:textColor="@color/text_black"
-            android:textSize="@dimen/sp_14"
+            android:id="@+id/confirm_order_address_disable"
+            android:layout_width="@dimen/dp_60"
+            android:layout_height="@dimen/dp_60"
+            android:layout_gravity="right"
+            android:layout_marginTop="@dimen/dp_20"
+            android:layout_marginRight="@dimen/dp_100"
+            android:src="@drawable/tag_out_delivery"
             />
 
-        <include layout="@layout/space_h"/>
-
-        <TextView
-            android:id="@+id/confirm_order_store_delivery"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/dp_10"
-            android:gravity="center_vertical"
-            android:text="同城鸽专送"
-            android:textColor="@color/text_dark_gray"
-            android:textSize="@dimen/sp_14"
-            />
-    </LinearLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_0.5"
-        android:background="@color/bg"/>
-
-    <!--商品-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_80"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/confirm_order_goods"
-            android:layout_width="@dimen/dp_280"
-            android:layout_height="@dimen/dp_80"
-            android:padding="@dimen/dp_10"
-            />
-
-        <TextView
-            android:id="@+id/confirm_order_goods_num"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:drawablePadding="@dimen/dp_8"
-            android:drawableRight="@drawable/ic_goto_arrow"
-            android:gravity="center_vertical|right"
-            android:paddingRight="@dimen/dp_10"
-            android:text="共10件"
-            android:textColor="@color/text_dark_gray"
-            android:textSize="@dimen/sp_14"
-            />
-    </LinearLayout>
+    </FrameLayout>
     <!--配送方式-->
     <LinearLayout
         android:id="@+id/confirm_order_deliveryL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <include layout="@layout/view_split_bar_light_margin"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_50"
@@ -337,11 +357,11 @@
         android:id="@+id/confirm_order_calculate"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/dp_20"
         android:paddingLeft="@dimen/dp_10"
         android:paddingRight="@dimen/dp_10"
         android:paddingTop="@dimen/dp_5"
-        android:paddingBottom="@dimen/dp_20"
-        android:orientation="vertical"
         />
 
     <View
@@ -355,9 +375,9 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_75"
         android:background="@null"
-        android:padding="@dimen/dp_10"
         android:gravity="left|top"
         android:hint="选填：给商家留言（50字以内）"
+        android:padding="@dimen/dp_10"
         android:textColor="@color/text_black"
         android:textSize="@dimen/sp_14"/>
 
