--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -24,6 +24,8 @@
         <attr name="round_border_size" format="dimension|reference"/>
         <attr name="round_border_color" format="color|reference"/>
         <attr name="noCache" format="boolean"/>
-
+    </declare-styleable>
+    <declare-styleable name="RecyclerViewMaxH">
+        <attr name="max_height" format="dimension|reference"/>
     </declare-styleable>
 </resources>
